Add background color to body, set height to 100vh and align button to center of the page

--- a/button.css
+++ b/button.css
@@ -1,4 +1,8 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #151b29;
 }
-
