--- a/button.css
+++ b/button.css
@@ -10,7 +10,7 @@ body {
 button {
   background: none;
   color: #ffc164;
-  border: #ffc164 2px solid;
+  border: 2px solid;
   font-size: large;
   padding: 1rem;
   cursor: pointer;
