--- a/button.css
+++ b/button.css
@@ -9,7 +9,7 @@ body {
 
 button {
   background: none;
-  color: #ffc164;
+  color: #ffa260;
   border: 2px solid;
   font-size: large;
   padding: 1rem;
