Correct the hover translate y value on the button

--- a/button.css
+++ b/button.css
@@ -17,7 +17,7 @@ button {
 }
 
 button:hover {
-  transform: translateY(-4px);
+  transform: translateY(-0.25em);
   color: #fff;
   border-color: #f1ff5c;
   box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
